# robot-util

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
scripts/: build.sh  buildenv.sh  packages.json  platforms.json  runtimeenv.sh
src/: CMakeLists.txt  config.c  config.h  gpio.c  gpio.h  i2c.c  i2c.h  list.c  main.c  menu.c  util.c  util.h
src/core/: config.c  config.h  list.c  list.h  map.c  map.h  menu.c  menu.h  util.c  util.h
src/devices/: rotary_encoder.c  rotary_encoder.h
src/devices/hd44780/: i2c_io.c  screen.c  screen.h
src/protocol/: bluetooth.c  bluetooth.h  dbus.c  dbus.h  gpio.c  gpio.h  i2c.c
src/ui/: app.c  app.h  menu.c  menu.h
src/ui/backends/: backends.h  curses.c  embedded.c
src/ui/menus/: bluetooth_menu.c  main_menu.c  menus.h
